crates/vigia/tests/snapshots/render__a_clean_worktree_says_so_rather_than_showing_nothing.snap
---
source: crates/vigia/tests/render.rs
assertion_line: 534
expression: "screen(40, 6, &nothing_changed(), &empty_chrome())"
---
"vigia · main · current ▾        watching"
"no unstaged changes                     "
"                                        "
"                                        "
"────────────────────────────────────────"
"q quit · f follow · m config · ? keys   "
