crates/vigia/tests/snapshots/render__a_file_with_no_line_diff_says_why.snap
---
source: crates/vigia/tests/render.rs
expression: "screen(60, 8, &view, &chrome())"
---
" vigia · current · 3 changed                       watching "
" M …s/banner.jpg                  ____________              "
"   binary                                                   "
" U src/merge.rs                   ____________              "
"   unresolved conflict                                      "
" R …src/shell.rs                  ____________    +0    -0  "
"────────────────────────────────────────────────────────────"
" q quit · f follow · m config · ? keys                  1/3 "
