crates/vigia/tests/snapshots/render__a_notice_keeps_the_follow_marker_because_state_is_not_a_hint.snap
---
source: crates/vigia/tests/render.rs
assertion_line: 2049
expression: "screen(80, 6, &view, &chrome)"
---
"  vigia · current ▾ · 1 changed                                       watching  "
"  M crates/vigia-core/src/frame.rs                    ____________    +3    -1  "
"  @@ -258,7 +258,9 @@                                                           "
"  258       pub fn advance(&mut self) {                                         "
"────────────────────────────────────────────────────────────────────────────────"
"  the index entry for src/lib.rs points at a missing blob        follow ▶  1/1  "
