crates/vigia/tests/snapshots/render__a_notice_takes_the_footer_from_the_key_hints.snap
---
source: crates/vigia/tests/render.rs
assertion_line: 2025
expression: "screen(80, 6, &view, &chrome)"
---
"  vigia · current ▾ · 1 changed                                       watching  "
"  M crates/vigia-core/src/frame.rs                    ____________    +3    -1  "
"  @@ -258,7 +258,9 @@                                                           "
"  258       pub fn advance(&mut self) {                                         "
"────────────────────────────────────────────────────────────────────────────────"
"  the index entry for src/lib.rs points at a missing blob                  1/1  "
