crates/vigia/tests/snapshots/render__a_path_too_long_to_fit_keeps_the_end_that_names_the_file.snap
---
source: crates/vigia/tests/render.rs
assertion_line: 1969
expression: "screen(40, 4, &view, &chrome())"
---
"vigia · current ▾ · 1 changed   watching"
"M …ule/frame.rs              +12    -3  "
"                                        "
"q quit · f follow · ? keys           1/1"
