crates/vigia/tests/snapshots/render__a_screenful_of_diff.snap
---
source: crates/vigia/tests/render.rs
expression: "screen(80, 14, &view, &chrome())"
---
"  vigia · current · 1 changed                                         watching  "
"  M crates/vigia-core/src/frame.rs                    ____________    +3    -1  "
"  @@ -258,7 +258,9 @@                                                           "
"  258       pub fn advance(&mut self) {                                         "
"  259           let mut files = Vec::new();                                     "
"  260 -         for change in self.changes() {                                  "
"  260 +         for change in self.walk() {                                     "
"  261 +             // one per path                                             "
"  262 +             files.push(change?);                                        "
"  263           }                                                               "
"  264       }                                                                   "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
"  q quit · f follow · m config · ? keys                                    1/1  "
