crates/vigia/tests/snapshots/render__tabs_become_columns_and_control_characters_become_visible.snap
---
source: crates/vigia/tests/render.rs
assertion_line: 2241
expression: backend
---
" vigia · current ▾ · 1 changed                     watching "
" M Makefile                       ____________    +1    -0  "
" 1 +     cargo build a   b                                  "
"────────────────────────────────────────────────────────────"
" q quit · f follow · m config · ? keys                  1/1 "
