crates/vigia/tests/snapshots/render__the_footer_shows_that_follow_is_engaged.snap
---
source: crates/vigia/tests/render.rs
expression: "screen(80, 6, &view, &following_chrome())"
---
"  vigia · current · 1 changed                                         watching  "
"  M crates/vigia-core/src/frame.rs                    ____________    +3    -1  "
"  @@ -258,7 +258,9 @@                                                           "
"  258       pub fn advance(&mut self) {                                         "
"────────────────────────────────────────────────────────────────────────────────"
"  q quit · f follow · m config · ? keys                          follow ▶  1/1  "
