crates/vigia/tests/snapshots/render__the_footer_takes_two_lines_when_forty_columns_cannot_hold_it.snap
---
source: crates/vigia/tests/render.rs
expression: "screen(40, 6, &view, &following_chrome())"
---
"vigia · current · 1 changed     watching"
"M …src/frame.rs               +3    -1  "
"@@ -258,7 +258,9 @@                     "
"────────────────────────────────────────"
"                           follow ▶  1/1"
"q quit · f follow · m config · ? keys   "
