crates/vigia/tests/snapshots/render__the_glance_elements_at_eighty_columns.snap
---
source: crates/vigia/tests/render.rs
assertion_line: 3174
expression: "screen(80, 5, &glancing(), &chrome())"
---
"  vigia · current ▾ · 3 changed                                       watching  "
"  M src/engine/watch.rs                ● ■■■■■■■■■■■■ ____▁▂▂▄▆▄▆█   +42    -7  "
"  M src/render/frame.rs                  ■■■■■■■■■■■■ _____▂▁_____   +11    -3  "
"────────────────────────────────────────────────────────────────────────────────"
"  q quit · f follow · m config · ? keys                                    1/3  "
